# nsuite

./: .gitignore  LICENSE  README.md  build.sh  clean.sh  install-local.sh  install.sh  notes.md  readme.md  run-bench.sh  run-validation.sh  setup.sh  whut.py
.github/workflows/: main.yml
benchmarks/bench_cell/neuron/: bench.mod  bench.py  input.json  meters.py  parameters.py  run_mpi.py  run_serial.py  test.py  util.py
benchmarks/common/: config.py  hoc_tools.py  metering.py  neuron_tools.py  readme.md
benchmarks/engines/allenring/: bench_config.sh
benchmarks/engines/allenring/arbor/: CMakeLists.txt  Rbp4-Cre_KL100_Ai14-203503.04.01.01_527109145_m.swc  parameters.hpp  ring.cpp
benchmarks/engines/busyring/: generate_inputs.py
benchmarks/engines/busyring/arbor/: CMakeLists.txt  parameters.hpp  ring.cpp
benchmarks/engines/busyring/neuron/: cell.py  run.py
benchmarks/models/kway/: config.sh  engine  large.json  medium.json  small.json
benchmarks/models/ring/: config.sh  large.json  medium.json  small.json
benchmarks/ring/: corenrn_table_line.sh  generate_inputs.py  small.json  table_line.sh
benchmarks/ring/arbor/: CMakeLists.txt  parameters.hpp  ring.cpp
benchmarks/ring/neuron/: cell.py  parameters.py  ring.json  run.py
common/: readme.md
common/python/: config.py  neuron_tools.py
common/python/nsuite/: stdarg.py  stdattr.py
docs/: benchmarks.rst  conf.py  engines.rst  index.rst  install.rst  makefile  running.rst  validation.rst
docs/static/: custom.css
plugins/neuron/: bench.mod  build.sh  test.py
scripts/: bench_output.sh  build_arbor.sh  build_coreneuron.sh  build_nest.sh  build_neuron.sh  build_validation_models.sh  csv_bench.sh  environment.sh  model_common.sh  util.sh
systems/: base.sh  daint-gpu-cnrn.sh  daint-gpu.sh  daint-mc.sh  daintmc.sh  gh.sh  jureca-gpu.sh  jureca-mc.sh  juwels-booster.sh  juwels-gpu.sh  juwels-mc.sh  linux.sh  tave.sh
validation/: README.md  model_functions.sh
validation/cable-steadystate/: README.md  default.param  generate-cable-steadystate  neuron-cable-steadystate.py  run  run-arbor  run-neuron
validation/example/: README.md  comparex  generate-example  generate-rc-expsyn  highcurrent.param  neuron-rc-expsyn.py  run
validation/example/src/: arbor-rc-expsyn.cpp  generate-rc-expsyn.py
validation/rallpack1/: README.md  default.param  generate-rallpack1  neuron-rallpack1.py  run  run-arbor  run-neuron
validation/rc-exp2syn-spike/: README.md  default.param  generate-rc-exp2syn-spike  neuron-rc-exp2syn-spike.py  run  run-arbor  run-coreneuron  run-neuron
validation/rc-exp2syn-spikes/: default.param  generate-rc-exp2syn-spikes  run
validation/rc-expsyn/: README.md  default.param  generate-rc-expsyn  neuron-rc-expsyn.py  run  run-arbor  run-neuron
validation/src/arbor-cable-steadystate/: CMakeLists.txt  arbor-cable-steadystate.cpp
validation/src/arbor-rallpack1/: BUILDFOR  CMakeLists.txt  arbor-rallpack1.cpp
validation/src/arbor-rc-exp2syn-spike/: CMakeLists.txt  arbor-rc-exp2syn-spike.cpp
validation/src/arbor-rc-expsyn/: BUILDLIST  CMakeLists.txt  arbor-rc-expsyn.cpp
validation/src/cmake/: Findnetcdf.cmake  UseLibraryPath.cmake
validation/src/include/: common_args.h  common_attr.h  netcdf_wrap.h
